# qthesia

./: CMakeLists.txt  README  RtMidi.cpp  b.cpp  b.h  loadFile.cpp  loadFile.h  main.cpp  main.ui  midimain.cpp  midimain.h  midiout.cpp  midiout.h  play.cpp  play.h  play_midi.cpp  record_midi.cpp  ui_main.h
vpiano/: CMakeLists.txt  vpiano.cpp  vpiano.h
